<resources translatable="false">
    <string name="app_name">Tron</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="please_enter_your_name">Пожалуйста, введите ваше имя</string>
    <string name="name">Имя</string>
    <string name="start">Начать</string>
    <string name="_0_10">0/10</string>
    <string name="detail2">Только эксперт по вселенной Marvel наберёт 20/20. Проверим это?</string>
    <string name="detail3">Пиксельные герои:15/20 набирают только сильнейшие фанаты Marvel</string>
    <string name="detail4">Узнать всех персонажей Free Fire, сможет лишь лучший игрок</string>
    <string name="image">image</string>
    <string name="mode_night_no">Light</string>
    <string name="mode_night_yes">Night</string>
    <string name="mode_night_follow_system">System</string>
    <string name="mode_night_auto_battery">No Batery</string>
    <string name="themes">Темы</string>
    <string name="night_mode">Темный режим</string>
    <string name="general">Общее</string>
    <string name="language">Язык</string>
    <string name="night_activated">Темный режим включен</string>
    <string name="night_deactivated">Темный режим выключен</string>
    <string name="tests_tab">Тесты</string>
    <string name="profile_tab">Профиль</string>
    <string name="settings_tab">Настройки</string>
    <string name="v_gamer">V-игрок</string>
    <string name="OnBack">Назад</string>
    <string name="submit">Потвердить</string>
    <string name="question1">Чья регенирация самая быстрая?</string>
    <string name="spider_man">Человек паук</string>
    <string name="wolverine">Росомаха</string>
    <string name="pool">Дэдпул</string>
    <string name="hulk">Халк</string>
    <string name="test_marvel_neon">Неоновый Марвел-Тест</string>
    <string name="test_marvel_movie">Марвел-Фильмы</string>
    <string name="question2">Щит Капитана Америки сделан из?</string>
    <string name="vibranium">Вибраниум</string>
    <string name="adamantium">Адамантий</string>
    <string name="titan">Титан</string>
    <string name="kriptonit">Криптонит</string>
    <string name="marvel_test_question_3">Из чего состоит скилет Росомахи?</string>
    <string name="marvel_test_question_4">Ностоящее имя Черной Пантеры?</string>
    <string name="primat">Примат</string>
    <string name="njobu">Н`Джобу</string>
    <string name="tchaka">Т`чяка</string>
    <string name="tchala">Т`чяла</string>
    <string name="marvel_test_question_5">Как еще называют Локки? </string>
    <string name="bog_lzhi">Бог лжи</string>
    <string name="bog_obmana">Бог обмана</string>
    <string name="black_prince">Темный принц</string>
    <string name="lord_elphie">Лорд эльфов</string>
    <string name="marvel_test_question_6">Имя этого персонажа? </string>
    <string name="dead_pool">Dead pool</string>
    <string name="deadpool">Deadpool</string>
    <string name="mister_pool">Мистер Пул</string>
    <string name="marvel_test_question_7">Заклятый враг Ракеты(енот)? </string>
    <string name="scrool">Скрулы</string>
    <string name="gidra">Гидра</string>
    <string name="tanos">Танос</string>
    <string name="octopusDoctor">Доктор Осминог</string>
    <string name="finish">КОНЕЦ</string>
    <string name="marvel_test_question_8">Как называется оружие Тора?</string>
    <string name="miolner">Мьельнир</string>
    <string name="god_grom">Бог Грома</string>
    <string name="escalibur">Эскалибур</string>
    <string name="asgard">Асгард</string>
    <string name="marvel_test_question_9">Доктор Стрэндж хранитель камня?</string>
    <string name="kamen_razuma">Камень Разума</string>
    <string name="kamen_dushi">Камень Души</string>
    <string name="kamen_time">Камень Времени</string>
    <string name="kamen_power">Камень Силы</string>
    <string name="marvel_test_question_10">Почему,Брюс стал Халком?</string>
    <string name="gamma">Гамма лучей</string>
    <string name="mutagen">Мутаген</string>
    <string name="X">Проект Х</string>
    <string name="experiment">Эксперимент</string>
    <string name="marvel_test_question_11">Вдова пожертвовала собой ради?</string>
    <string name="bruce_banner">Брюс Баннерa</string>
    <string name="clinton_barton">Клинтон Бартонa</string>
    <string name="nic_fiury">Ник Фьюри</string>
    <string name="agent_kolson">Агент Колсонa</string>
    <string name="marvel_test_question_12">Кто спас зимного солдата?</string>
    <string name="red_shot">Красный Череп</string>
    <string name="baron">Барон Стракер</string>
    <string name="zemo">Земо</string>
    <string name="marvel_test_question_13">Родная планета Таноса?</string>
    <string name="cybertron">Кибертрон</string>
    <string name="cripton">Криптон</string>
    <string name="midgard">Мидгард</string>
    <string name="marvel_test_question_14">Как еще называют Соколиного глаза?</string>
    <string name="luchnik">Лучник</string>
    <string name="arrow">Стрелок</string>
    <string name="ronin">Ронин</string>
    <string name="samurai">Самурай</string>
    <string name="marvel_test_question_15">Тип способностей Ванды?</string>
    <string name="magice">Магия</string>
    <string name="mutation">Мутация</string>
    <string name="nauka">Наука</string>
    <string name="tehnology">Технология</string>
    <string name="marvel_test_question_16">Какой камень вживлен в Вижна?</string>
    <string name="marvel_test_question_17">Кто такой призрачный гонщик?</string>
    <string name="demon">Damon</string>
    <string name="angel">Ангел</string>
    <string name="hranitel">Хрантитель</string>
    <string name="mutant">Мутант</string>
    <string name="marvel_test_question_18">Насколько может уменшаться Человек Муравей?</string>
    <string name="atom">до атомов</string>
    <string name="malekuls">до малекул</string>
    <string name="vakums">до вакума</string>
    <string name="muravev">до муравьев</string>
    <string name="marvel_test_question_19">Кто создал Ультрома в комиксах?</string>
    <string name="tohni_stark">Тони Старк</string>
    <string name="vizhn">Вижн</string>
    <string name="marvel_test_question_20">Кто такой Блэйд?</string>
    <string name="vampire">Вампир</string>
    <string name="day_vampire">Дневной вампир</string>
    <string name="mutant_vampire">Мутант</string>
    <string name="polukrovka_vampire">Наемник</string>
    <string name="Default">По умолчанию</string>
    <string name="marvel_movie_question">Угадай фильм по кадру</string>
    <string name="muravei">Человек Муравей</string>
    <string name="tor_rognarek">Тор: Рогнарек</string>
    <string name="perviy_mstitel">Первый мститель</string>
    <string name="black_panter">Черная пантера</string>
    <string name="era_altron">Мстители: Эра Альтрона</string>
    <string name="perviy_mstitel_protivostoyanie">Первый мститель: Противостояние</string>
    <string name="perviy_mstitel_drugaya_voina">Первый мститель: Другая война</string>
    <string name="avengers">Мстители</string>
    <string name="tor_2">Тор 2: Царство тьмы</string>
    <string name="tor">Тор</string>
    <string name="hulk_neveroyatniy">Неворятный Халк</string>
    <string name="doctor_strange">Доктор Стрэндж</string>
    <string name="iron_man">Железный Человек</string>
    <string name="iron_man_2">Железный человек 2</string>
    <string name="iron_man_3">Железный Человек</string>
    <string name="spider_man_back_home">Человек-паук: Возвращение домой</string>
    <string name="galaxy_strage">Стражи Галактики</string>
    <string name="avengers_voina_beskonnechnosti">Мстители: Война бесконечности</string>
    <string name="galaxy_strage_2">Стражи Галактики.Часть 2</string>
    <string name="your_result_is">Ваш результат - </string>
    <string name="congratulations">Проздравляю!</string>
    <string name="result">Результат</string>
    <string name="go_next_question">К следующему вопросу</string>
    <string name="test_marvel_pixel">Пиксельный Марвел-Тест</string>
    <string name="capitan_marvel">Капитан Марвел</string>
    <string name="muravei_and_osa">Человек-муравей и Оса</string>
    <string name="alok">Алок</string>
    <string name="steffie">Стеффа</string>
    <string name="chronos">Кронос</string>
    <string name="dasha">Даша</string>
    <string name="andrew">Андрей</string>
    <string name="moco">Моко</string>
    <string name="paloma">Палома</string>
    <string name="laura">Лаура</string>
    <string name="monkey_king">Король обезьян</string>
    <string name="k">K</string>
    <string name="miguel">Мигель</string>
    <string name="luqueta">Люкуета</string>
    <string name="shiro">Широ</string>
    <string name="maxim">Максим</string>
    <string name="misha">Миша</string>
    <string name="hayato">Хайато</string>
    <string name="kelly">Келли</string>
    <string name="jai">ДжаЙ</string>
    <string name="wolfrahh">Волкрахх</string>
    <string name="raphael">Рафаэль</string>
    <string name="test_free_fire">Фрифаер-Тест</string>
    <string name="test_zombies_test">Зомби-Фильмы</string>
    <string name="detail5">Угадайте фильм по зомби</string>
    <string name="im_legend">Я легенда</string>
    <string name="monster_on_vacation">Монстры на каникулах 2</string>
    <string name="warm_bodies">Тепло наших тел</string>
    <string name="train_to_pusan">Поезд в Пусан</string>
    <string name="santa_clarita_diet">Диета из Санты-Клариты</string>
    <string name="new_era_Z">Новая Эра Z</string>
    <string name="machete_kills">Мачете убивает</string>
    <string name="from_dusk_to_dawn">От заката до рассвета</string>
    <string name="dawn_of_the_dead">Рассвет мертвецов</string>
    <string name="pet_cemetery">Кладбище домашних животных</string>
    <string name="game_of_thrones">Игра прeстолов</string>
    <string name="pride_prejudice_zombies">Гордость и предупреждение и зомби</string>
    <string name="grind_house">Гранд-Хаус</string>
    <string name="para_norman">Пара норман</string>
    <string name="resident_evil">Обитель зла</string>
    <string name="_28_days_later">28 дней спустя</string>
    <string name="welcome_to_Zombie_land">Зомбилэнд</string>
    <string name="corpse_bride">Труп невесты</string>
    <string name="scouts_guide_to_the_zombie">Скауты против зомби</string>
    <string name="shaun_of_the_dead">Зомби по имени Шон</string>
    <string name="really_History">Реальная история</string>
    <string name="caroline_in_the_country_nightmares">Каролина в старне кошмаров</string>
    <string name="night_of_the_living_dead">Ночь живых мертвецов</string>
    <string name="nosferatu">Носферату</string>
    <string name="the_walking_dead">Ходячие мертвецы</string>
    <string name="twilight">Сумерки</string>
    <string name="death_becomes_her">Смерть ей к лицу</string>
    <string name="ash_vs_evil_dead">Эш против зловейших мертвецов</string>
    <string name="rai_and_last_dragon">Райя и последний дракон</string>
    <string name="vpered">Вперед</string>
    <string name="cars">Тачки </string>
    <string name="cars_2">Тачки 2</string>
    <string name="cars_3">Тачки 3</string>
    <string name="ralf">Ральф</string>
    <string name="email">Эмайл</string>
    <string name="password">Пароль</string>
    <string name="sign_in_with_google">Войти с помощью Google</string>
    <string name="exit">Выйти</string>
    <string name="account_activated">аккаунт активирован</string>
    <string name="account_disabled">аккаунт дизактивирован</string>
    <string name="forget_password">Забыли Пароль? </string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="btn_submit">Потвердить</string>
    <string name="continue_sign">Продолжить</string>
    <string name="havent_account_question">Ещё нет аккаунта?</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_title">Вход</string>
    <string name="sign_in_rules">Пожалуйста, введите ваш email и пароль для входа в аккаунт</string>
    <string name="rating">Рейтинг</string>
    <string name="movie_tab">Фильмы</string>
</resources>