<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activities.Connection">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/viewpager_round"
        android:backgroundTint="@color/ripple_transparent"

        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="270dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:background="@drawable/round"
            android:scaleType="centerCrop"
            app:elevation="5dp"
            app:shapeAppearanceOverlay="@style/Round"
            tools:src="@drawable/free_fire_test" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/graphiklcg_semibold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"
            app:elevation="5dp"
            tools:text="@string/test_free_fire" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/graphiklcg_regular"
            android:textAlignment="center"
            android:textSize="15sp"
            app:autoSizeTextType="uniform"
            app:elevation="5dp"
            tools:text="@string/detail4" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:clickable="false"
            android:text="@string/start"
            app:elevation="5dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>