<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="100"
    android:background="@drawable/gradient_stroke"
    android:baselineAligned="false"
    android:elevation="2dp"
    android:orientation="horizontal">

        <ImageView
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_purple"
            android:id="@+id/video"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_gravity="center"
            android:fontFamily="@font/graphiklcg_regular"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:layout_weight="45"
            android:textSize="16sp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/name" />

        <TextView
           android:layout_gravity="center"
            android:text="@string/rating"
            android:gravity="center"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:layout_weight="55"
            android:fontFamily="@font/graphiklcg_regular"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/rating" />




</LinearLayout>